edit controls appearance

--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
                     <button onclick="openPositionEditor()" style="width: 100%; padding: 10px; background: #3498db; color: white; border: none; border-radius: 4px; cursor: pointer; font-weight: bold; margin-bottom: 8px;">
                         📝 <span id="position-editor-btn-text">Position Editor</span>
                     </button>
-                    <small id="position-editor-desc" style="color: #888; font-size: 12px;">Create and edit custom chess positions</small>
                 </div>
 
                 <div style="display: flex; gap: 10px; justify-content: flex-end; margin-top: 20px;">
@@ -904,7 +903,7 @@ let SYMBOLS = {
     spartan: 'spartan', super_runner: 'super_runner',
     camel_knight: 'camel_knight', endless_knight: 'endless_knight', moose: 'moose',
     nuke_bishop: 'nuke_bishop', sniper: 'sniper', ship: 'ship',
-    fortress: 'fortress', helicopter: 'helicopter', rocket: 'rocket',
+    helicopter: 'helicopter', rocket: 'rocket',
     unicorn: 'unicorn', pin: 'pin', range: 'range',
 };
 
